--- a/doc/topics/releases/2014.7.0.rst
+++ b/doc/topics/releases/2014.7.0.rst
@@ -25,7 +25,7 @@ Please keep in mind that this is a beta release of RAET and we hope for bugs to
 be worked out, performance to be better realized and more in the Lithium
 release.
 
-Simply stated, users running salt with RAET should expect some hiccups as we
+Simply stated, users running Salt with RAET should expect some hiccups as we
 hammer out the update. This is a BETA release of Salt RAET.
 
 For information about how to use Salt with RAET please see the tutorial:
@@ -34,7 +34,7 @@ For information about how to use Salt with RAET please see the tutorial:
 State System Enhancements
 =========================
 
-New Imperitive State Keyword "Listen"
+New Imperative State Keyword "Listen"
 -------------------------------------
 
 The new listen keyword allows for completely imperative states by calling the
@@ -43,8 +43,8 @@ mod_watch routine after all states have run instead of re-ordering the states.
 Mod Aggregate Runtime Manipulator
 ---------------------------------
 
-The new mod_aggragate system allows for the state system to rewrite the state
-data durring execution. This allows for state deffinitions to be aggregated
+The new mod_aggregate system allows for the state system to rewrite the state
+data during execution. This allows for state definitions to be aggregated
 dynamically at runtime.
 
 The best example is found in the pkg state. If mod_aggregate is turned on,
@@ -54,7 +54,7 @@ and install them all at once in the first pkg state.
 
 These runtime modifications make it easy groups of states together, in future
 versions we hope to fill out the mod_aggregate system to build in more and
-more optomizations.
+more optimizations.
 
 For more documentation on mod_aggregate please see ref/states/aggregate
 
@@ -127,7 +127,7 @@ Lots of new OpenStack stuff
 Queues System
 -------------
 
-Ran change external queue systems into salt events
+Ran change external queue systems into Salt events
 
 Multi Master Failover Additions
 -------------------------------
